# internal/server/grpc.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "product/api/helloworld/v1"
+	"product/api/product/v1"
 	"product/internal/conf"
 	"product/internal/service"
 
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, logger log.Logger, productSvc *service.ProductService, seckillSvc *service.SeckillService, instanceSvc *service.InstanceService) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +27,8 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterProductServiceServer(srv, productSvc)
+	v1.RegisterSeckillServiceServer(srv, seckillSvc)
+	v1.RegisterInstanceServiceServer(srv, instanceSvc)
 	return srv
 }
