# internal/server/http.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "product/api/helloworld/v1"
+	"product/api/product/v1"
 	"product/internal/conf"
 	"product/internal/service"
 
@@ -11,7 +11,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, logger log.Logger, productSvc *service.ProductService, instanceSvc *service.InstanceService) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -27,6 +27,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterProductServiceHTTPServer(srv, productSvc)
+	v1.RegisterInstanceServiceHTTPServer(srv, instanceSvc)
 	return srv
 }
